<resources>
    <string name="app_name">MyMangaList</string>
    <string name="search">Search</string>
    <string name="statistics">Wardrobe numbers</string>
    <string name="image_of_the_item">Image of the manga</string>
    <string name="item_title">Manga Title</string>
    <string name="date">Acquisition date</string>
    <string name="add_new_item">Add new manga +</string>
    <string name="take_gps_position">Take gps position</string>
    <string name="description">Description</string>
    <string name="take_a_picture">Take a picture</string>
    <string name="image_captured">Image captured</string>
    <string name="delete">Delete</string>
    <string name="username">Username</string>
    <string name="category_text">Genres : </string>
    <string name="wear_count">Read it</string>
    <string name="take_date" >Date</string>
    <string name="location" >Store location</string>
    <string name="completed" >Completed</string>
    <string name="plan_to_read" >Plan to read</string>
    <string name="price" >Price</string>
    <string name="category">Genres</string>
    <string name="price_text">Price EUR€:</string>
    <string name="date_text" >Acquisition date: </string>
    <string name="location_text" >Store location: </string>
    <string name="select_a_picture" >Select picture</string>
    <string name="finances_txt" >Your manga list info:</string>
    <string name="favorite" >Favorite</string>
    <string name="complited" >Complited</string>
    <string name="reading" >Reading</string>
    <string name="profile" >Profile name</string>
    <string name="show_all" >Show All</string>
    <string name="total_price_text" >Money spent on manga:</string>
    <string name="total_price_label_txt" >price</string>
    <string name="value">€</string>
    <string name="items_in" >Manga in your list, divided per genres</string>
    <string name="action" >Action</string>
    <string name="comedy" >Comedy</string>
    <string name="horror" >Horror</string>
    <string name="romance" >Romance</string>
    <string name="sliceOfLife" >Slice of life</string>
    <string name="sci_fi" >Sci-fi</string>
    <string name="Mystery">Mystery</string>
    <string name="Sports" >Sports</string>
    <string name="Supernatural" >Supernatural</string>
    <string name="all">Show all genres</string>
    <string-array name="categories_array">
        <item>Select a genres:</item>
        <item>Action</item>
        <item>Comedy</item>
        <item>Horror</item>
        <item>Romance</item>
        <item>Slice of Life</item>
        <item>Sci-Fi</item>
    </string-array>
</resources>