<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/single_card"
    android:layout_margin="16dp"
    app:cardBackgroundColor="@color/white"
    app:cardCornerRadius="@dimen/cardview_default_radius"
    app:strokeWidth="1dp"
    app:strokeColor="@color/material_on_surface_stroke">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/item_imageview"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:background="@color/purple_500"
            android:contentDescription="@string/image_of_the_item"
            android:scaleType="centerCrop"
            android:src="@drawable/manga_mashup" />

        <TextView
            android:id="@+id/item_textview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="3dp"
            android:text="@string/item_title"
            android:textAppearance="@style/TextAppearance.Material3.TitleLarge" />

        <TextView
            android:id="@+id/price_textview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="3dp"
            android:text="@string/category"
            android:textAppearance="@style/TextAppearance.Material3.LabelLarge" />

        <TextView
            android:id="@+id/date_textview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="3dp"
            android:text="@string/description"
            android:textAppearance="@style/TextAppearance.Material3.LabelLarge" />

        <!-- Pulsante cliccabile a forma di stella -->
        <ImageButton
            android:id="@+id/star_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:background="?attr/selectableItemBackground"
            android:contentDescription="@string/favorite"
            android:padding="8dp"
            android:src="@drawable/ic_favorite" />

    </androidx.appcompat.widget.LinearLayoutCompat>
</com.google.android.material.card.MaterialCardView>
