<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.50" />

            <ImageView
                android:id="@+id/item_image"
                android:layout_width="392dp"
                android:layout_height="189dp"
                android:layout_margin="10dp"
                android:layout_marginTop="244dp"
                android:background="@color/purple_500"
                android:contentDescription="@string/image_of_the_item"
                android:src="@drawable/ic_baseline_checkroom_24"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/item_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/item_title"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.Material3.TitleLarge"
                android:textColor="@color/purple_700"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/item_image" />

            <TextView
                android:id="@+id/category"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_margin="10dp"
                android:layout_marginTop="8dp"
                android:text="@string/category_text"
                android:textAppearance="@style/TextAppearance.Material3.LabelLarge"
                android:textColor="@color/purple_500"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/item_name" />

            <TextView
                android:id="@+id/category_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/category"
                android:textAppearance="@style/TextAppearance.Material3.LabelLarge"
                app:layout_constraintEnd_toStartOf="@id/guideline"
                app:layout_constraintStart_toEndOf="@id/category"
                app:layout_constraintTop_toBottomOf="@id/item_name" />

            <TextView
                android:id="@+id/price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_margin="10dp"
                android:layout_marginTop="20dp"
                android:text="@string/price_text"
                android:textAppearance="@style/TextAppearance.Material3.LabelLarge"
                android:textColor="@color/purple_500"
                app:layout_constraintEnd_toStartOf="@id/item_price"
                app:layout_constraintStart_toEndOf="@id/guideline"
                app:layout_constraintTop_toBottomOf="@id/item_name" />

            <TextView
                android:id="@+id/item_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_margin="10dp"
                android:text="@string/price"
                android:textAppearance="@style/TextAppearance.Material3.LabelLarge"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/price"
                app:layout_constraintTop_toBottomOf="@id/item_name" />

            <TextView
                android:id="@+id/date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_margin="10dp"
                android:text="@string/date_text"
                android:textAppearance="@style/TextAppearance.Material3.LabelLarge"
                android:textColor="@color/purple_500"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/category" />

            <TextView
                android:id="@+id/acquisition_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_margin="10dp"
                android:layout_marginTop="8dp"
                android:text="@string/date"
                android:textAppearance="@style/TextAppearance.Material3.LabelLarge"
                app:layout_constraintStart_toEndOf="@id/date"
                app:layout_constraintTop_toBottomOf="@+id/category" />

            <TextView
                android:id="@+id/location_site"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_margin="10dp"
                android:layout_marginTop="8dp"
                android:text="@string/location_text"
                android:textAppearance="@style/TextAppearance.Material3.LabelLarge"
                android:textColor="@color/purple_500"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/date" />

            <TextView
                android:id="@+id/location"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_margin="10dp"
                android:text="@string/location"
                android:textAppearance="@style/TextAppearance.Material3.LabelLarge"
                app:layout_constraintStart_toEndOf="@id/location_site"
                app:layout_constraintTop_toBottomOf="@id/date" />

            <TextView
                android:id="@+id/item_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/description"
                android:textAppearance="@style/TextAppearance.Material3.LabelMedium"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/location" />

            <Button
                android:id="@+id/wear_count_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_margin="10dp"
                android:backgroundTint="@color/purple_500"
                android:text="@string/wear_count"
                android:textAppearance="@style/TextAppearance.Material3.LabelMedium"
                app:icon="@drawable/ic_baseline_add_24"
                app:layout_constraintEnd_toStartOf="@id/delete_button"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/item_description" />

            <Button
                android:id="@+id/delete_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_margin="10dp"
                android:backgroundTint="@color/purple_500"
                android:text="@string/delete"
                android:textAppearance="@style/TextAppearance.Material3.LabelMedium"
                app:icon="@drawable/ic_baseline_delete_24"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/wear_count_button"
                app:layout_constraintTop_toBottomOf="@id/item_description" />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>


</androidx.appcompat.widget.LinearLayoutCompat>