<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <include layout="@layout/fab_add" />

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_anchor="@+id/scrollView2"
        app:layout_anchorGravity="center">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.77" />

            <TextView
                android:id="@+id/label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Titolo:"
                android:textSize="16sp"
                android:textColor="@color/black"
                app:layout_constraintEnd_toStartOf="@+id/item_textinput"
                app:layout_constraintTop_toTopOf="@+id/item_textinput"
                app:layout_constraintBottom_toBottomOf="@+id/item_textinput"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginEnd="8dp"/>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/item_textinput"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="225dp"
                android:layout_height="56dp"
                android:layout_margin="10dp"
                app:endIconMode="clear_text"
                app:errorEnabled="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintWidth_percent="0.75">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/item_edittext"
                    android:layout_width="225dp"
                    android:layout_height="wrap_content"
                    android:hint="@string/item_title"
                    android:imeOptions="flagNoExtractUi" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/price_textinput"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                app:endIconMode="clear_text"
                app:errorEnabled="true"
                app:layout_constraintEnd_toEndOf="@id/guideline"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/item_textinput">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/price_edittext"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/price"
                    android:imeOptions="flagNoExtractUi"
                    android:inputType="numberDecimal"
                    android:digits="0123456789."/>
            </com.google.android.material.textfield.TextInputLayout>

            <ImageView
                android:id="@+id/price_icon"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@id/guideline"
                app:layout_constraintBottom_toTopOf="@id/genres"
                app:layout_constraintTop_toBottomOf="@id/item_textinput"
                android:src="@drawable/ic_baseline_price_24"/>

            <Spinner
                android:id="@+id/genres"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                app:layout_constraintEnd_toEndOf="@id/guideline"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/price_textinput" />



            <ImageButton
                android:id="@+id/gps_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:backgroundTint="@color/white"
                android:contentDescription="@string/take_gps_position"
                android:minHeight="48dp"
                app:layout_constraintBottom_toTopOf="@id/description_textinput"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@id/guideline"
                app:layout_constraintTop_toBottomOf="@+id/date_textinput"
                app:srcCompat="@drawable/ic_baseline_gps_fixed_24" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/date_textinput"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                app:endIconMode="clear_text"
                app:errorEnabled="true"
                app:layout_constraintEnd_toEndOf="@id/guideline"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/genres">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/date_edittext"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/date"
                    android:imeOptions="flagNoExtractUi"
                    android:inputType="date" />
            </com.google.android.material.textfield.TextInputLayout>

            <ImageButton
                android:id="@+id/date_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:backgroundTint="@color/white"
                android:contentDescription="@string/take_date"
                android:minHeight="48dp"
                app:layout_constraintBottom_toTopOf="@id/location_textinput"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.521"
                app:layout_constraintStart_toStartOf="@id/guideline"
                app:layout_constraintTop_toBottomOf="@id/genres"
                app:layout_constraintVertical_bias="0.488"
                app:srcCompat="@drawable/ic_baseline_calendar_month_24" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/location_textinput"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="305dp"
                android:layout_height="67dp"
                android:layout_margin="10dp"
                app:endIconMode="clear_text"
                app:errorEnabled="true"
                app:layout_constraintEnd_toStartOf="@id/guideline"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/date_textinput">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/location_edittext"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/location"
                    android:imeOptions="flagNoExtractUi" />
            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/description_textinput"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                app:endIconMode="clear_text"
                app:errorEnabled="true"
                app:layout_constraintEnd_toStartOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/location_textinput">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/description_edittext"
                    android:layout_width="300dp"
                    android:layout_height="55dp"
                    android:hint="@string/description"
                    android:imeOptions="flagNoExtractUi" />
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/capture_button"
                style="@style/ThemeOverlay.Material3.Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/take_a_picture"
                app:layout_constraintEnd_toStartOf="@id/gallery_button"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/description_textinput" />

            <Button
                android:id="@+id/gallery_button"
                style="@style/ThemeOverlay.Material3.Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/select_a_picture"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/capture_button"
                app:layout_constraintTop_toBottomOf="@id/description_textinput" />

            <ImageView
                android:id="@+id/picture_displayed_imageview"
                android:layout_width="0dp"
                android:layout_height="150dp"
                android:layout_margin="10dp"
                android:background="@color/purple_500"
                android:contentDescription="@string/image_captured"
                android:src="@drawable/ic_baseline_checkroom_24"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/capture_button" />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>